am adaugat ceva

--- a/TWebProject/TWebProject.csproj
+++ b/TWebProject/TWebProject.csproj
@@ -103,6 +103,7 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Navbar.cshtml" />
+    <Content Include="Views\Home\index.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
