Am creat entitatea User.cs din DbModel

--- a/TWebProject.BusinessLogic/TWebProject.BusinessLogic.csproj
+++ b/TWebProject.BusinessLogic/TWebProject.BusinessLogic.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BDContent\User\UserContent.cs" />
     <Compile Include="BussinesLogic.cs" />
     <Compile Include="Core\AdminAPI.cs" />
     <Compile Include="Core\UserAPI.cs" />
