--- a/TWebProject.Domain/TWebProject.Domain.csproj
+++ b/TWebProject.Domain/TWebProject.Domain.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entitie\User\DbModel\User.cs" />
     <Compile Include="Entitie\User\ULoginData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,6 +62,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Entitie\Auth\" />
+    <Folder Include="Entitie\GeneralResponse\" />
+    <Folder Include="Entitie\Product\" />
     <Folder Include="Enums\" />
   </ItemGroup>
   <ItemGroup>
