--- a/TWebProject/Web.config
+++ b/TWebProject/Web.config
@@ -8,9 +8,22 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+
+	<connectionStrings>
+		
 	
-	
-	
+	<add name="TWebProject"
+		 connectionString ="Data Source = DESKTOP-I7B5AG7\SQLEXPRESS;
+		 Initial Catalog = databaseName;
+		 Persist Security Info = True;
+		 User ID = TWebProject;
+		 Password=12345;
+		 MultipleActiveResultSets=True"
+		 providerName = "System.Data.SqlClient"
+		 />
+		
+	</connectionStrings>
 	
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
