--- a/TWebProject/TWebProject.Web.csproj
+++ b/TWebProject/TWebProject.Web.csproj
@@ -114,6 +114,7 @@
     <Content Include="img\retvierCaine.png" />
     <Content Include="img\upImg.png" />
     <Content Include="img\yellowStar.png" />
+    <Content Include="Style\login.css" />
     <Content Include="Style\styleIndex.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -150,7 +151,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TWebProject.BusinessLogic\TWebProject.BusinessLogic.csproj">
