--- a/TWebProject/TWebProject.Web.csproj
+++ b/TWebProject/TWebProject.Web.csproj
@@ -96,6 +96,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\animate.css" />
+    <Content Include="css\bootstrap.min.css" />
+    <Content Include="css\bootstrap\mixins\_alert.css" />
+    <Content Include="css\bootstrap\mixins\_border-radius.css" />
+    <Content Include="css\bootstrap\mixins\_box-shadow.css" />
+    <Content Include="css\bootstrap\mixins\_screen-reader.css" />
+    <Content Include="css\bootstrap\mixins\_visibility.css" />
+    <Content Include="css\bootstrap\utilities\_stretched-link.css" />
+    <Content Include="css\bootstrap\utilities\_visibility.css" />
+    <Content Include="css\bootstrap\_media.css" />
+    <Content Include="css\style.css" />
     <Content Include="Global.asax" />
     <Content Include="img\ad1.png" />
     <Content Include="img\ad2.png" />
@@ -108,6 +119,7 @@
     <Content Include="img\griCat.png" />
     <Content Include="img\icon.png" />
     <Content Include="img\icon.svg" />
+    <Content Include="img\img.jpg" />
     <Content Include="img\oreoCat.png" />
     <Content Include="img\pisi1.png" />
     <Content Include="img\pisi2.png" />
@@ -120,6 +132,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AdoptController.cs" />
+    <Compile Include="Controllers\ContulMeuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
@@ -133,6 +147,9 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="img\.gitkeep" />
+    <Content Include="css\.DS_Store" />
+    <Content Include="css\bootstrap\.DS_Store" />
+    <Content Include="css\bootstrap\mixins\.DS_Store" />
     <None Include="packages.config" />
     <Content Include="Views\Home\Animal.cshtml" />
     <Content Include="Views\Shared\_Grid.cshtml" />
@@ -144,8 +161,10 @@
     <Content Include="Views\Shared\_LayoutRegister.cshtml" />
     <Content Include="Views\Register\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutLogin.cshtml" />
-    <Content Include="Views\Home\Adopt.cshtml" />
+    <Content Include="Views\Adopt\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutAdopt.cshtml" />
+    <Content Include="Views\ContulMeu\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutContulMeu.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
