Am facut modificari

--- a/TWebProject/TWebProject.Web.csproj
+++ b/TWebProject/TWebProject.Web.csproj
@@ -106,6 +106,7 @@
     <Content Include="css\bootstrap\utilities\_stretched-link.css" />
     <Content Include="css\bootstrap\utilities\_visibility.css" />
     <Content Include="css\bootstrap\_media.css" />
+    <Content Include="css\buton.css" />
     <Content Include="css\style.css" />
     <Content Include="Global.asax" />
     <Content Include="img\ad1.png" />
@@ -133,6 +134,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdoptController.cs" />
+    <Compile Include="Controllers\ButtonAscunsController.cs" />
     <Compile Include="Controllers\ContulMeuController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
@@ -140,6 +142,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Content Include="js\script.js" />
     <Compile Include="Models\UserData.cs" />
     <Compile Include="Models\User\UserLogin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -165,6 +168,8 @@
     <Content Include="Views\Shared\_LayoutAdopt.cshtml" />
     <Content Include="Views\ContulMeu\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutContulMeu.cshtml" />
+    <Content Include="Views\ButtonAscuns\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutButton.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
