--- a/TWebProject/TWebProject.Web.csproj
+++ b/TWebProject/TWebProject.Web.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\DonateController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\ManagementController.cs" />
     <Compile Include="Controllers\PreferateController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Global.asax.cs">
@@ -177,6 +178,14 @@
     <Content Include="Views\Shared\_LayoutDonate.cshtml" />
     <Content Include="Views\Preferate\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutPreferate.cshtml" />
+    <Content Include="Views\Management\Index.cshtml" />
+    <Content Include="Views\Shared\_LayoutManagement.cshtml" />
+    <Content Include="Views\Shared\_Manage.cshtml" />
+    <Content Include="Views\Management\Edit.cshtml" />
+    <Content Include="Views\Management\Delete.cshtml" />
+    <Content Include="Views\Management\Create.cshtml" />
+    <Content Include="Views\Shared\_LayoutEdit.cshtml" />
+    <Content Include="Views\Shared\_LayoutDelete.cshtml" />
     <None Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <None Include="Web.Debug.config">
